--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="jumbotron text-center {% if 'dark-mode' in body_class %}dark-mode{% endif %}">
-    <h1 class="display-4">Welcome to My Website</h1>
-    <p class="lead">A simple Flask application with authentication</p>
+    <h1 class="display-4">Welcome to Borad</h1>
+    <p class="lead">A simple website to contact</p>
     <hr class="my-4">
     <div class="home-buttons">
         {% if 'username' not in session %}
