--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>{% block title %}My Website{% endblock %}</title>
+  <title>{% block title %}Borad{% endblock %}</title>
   <!-- Include Font Awesome for eye icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
         integrity="sha512-Fo3rlrZj/k7ujTnH/PR0jq0PzHB3HzF2XDFHSRu8Us4w0v5At8+3Sy5WCkxn7QYNMbH5Oz94rDt+O5Q3c1d+2w==" 
@@ -207,7 +207,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light" id="mainNavbar">
     <div class="container-fluid px-3">
-      <a class="navbar-brand" href="{{ url_for('home') }}">My Website</a>
+      <a class="navbar-brand" href="{{ url_for('home') }}">Borad</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
