--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard | My Website{% endblock %}
+{% block title %}Dashboard | Borad{% endblock %}
 
 {% block content %}
 <div class="card">
