--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Reset Password | My Website{% endblock %}
+{% block title %}Reset Password{% endblock %}
 
 {% block content %}
 <div class="card card-form">
