--- a/templates/verify_reset_code.html
+++ b/templates/verify_reset_code.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Verify Reset Code | My Website{% endblock %}
+{% block title %}Verify Reset Code{% endblock %}
 
 {% block content %}
 <div class="card card-form">
