--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Forgot Password | My Website{% endblock %}
+{% block title %}Forgot Password {% endblock %}
 
 {% block content %}
 <div class="card card-form">
