--- a/templates/base.html
+++ b/templates/base.html
@@ -256,7 +256,7 @@
 
   <footer class="footer mt-auto py-3 text-center" id="pageFooter">
     <div class="container">
-      <small>&copy; {{ current_year }} My Website. All rights reserved.</small>
+      <small>&copy; {{ current_year }} Borad. All rights reserved.</small>
     </div>
   </footer>
 
