--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Reset Password{% endblock %}
+{% block title %}Reset Password | My Website{% endblock %}
 
 {% block content %}
-<div class="card card-form">
+<div class="card card-form mx-auto my-5 p-4" style="max-width: 500px;">
     <div class="card-body text-center">
         <h2 class="card-title mb-4">Reset Password</h2>
         <form method="POST" action="{{ url_for('reset_password') }}">
