--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -3,9 +3,9 @@
 {% block title %}Change Password | My Website{% endblock %}
 
 {% block content %}
-<div class="card card-form">
+<div class="card card-form mx-auto my-5 p-4" style="max-width: 500px;">
   <div class="card-body">
-    <h2 class="card-title">Change Password</h2>
+    <h2 class="card-title text-center mb-4">Change Password</h2>
     <form action="{{ url_for('change_password') }}" method="POST">
       <div class="mb-3">
         <label for="old_password" class="form-label">Old Password</label>
