--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
+
 {% block title %}Dashboard{% endblock %}
+
 {% block content %}
 <div class="row">
   <!-- Sidebar: Profile and Navigation -->
@@ -9,16 +11,24 @@
         <h5 class="card-title">Profile</h5>
         <p class="card-text">Username: {{ session.username }}</p>
         <!-- If you store additional info such as email, display it here -->
-        <a href="/change_password" class="btn btn-primary btn-sm">Change Password</a>
+        <a href="/change_password" class="btn btn-shiny btn-smaller">Change Password</a>
       </div>
     </div>
     <div class="card mb-4 animate__animated animate__fadeInLeft">
       <div class="card-body">
         <h5 class="card-title">Navigation</h5>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item"><a href="/dashboard">Dashboard</a></li>
-          <li class="list-group-item"><a href="/contact_submissions">Contact Submissions</a></li>
-          <li class="list-group-item"><a href="/logout">Logout</a></li>
+          <li class="list-group-item">
+            <a href="/dashboard" class="btn btn-shiny btn-smaller">Dashboard</a>
+          </li>
+          <li class="list-group-item">
+            <a href="/contact" class="btn btn-shiny btn-smaller">Contact</a>
+          </li>
+          {% if session.username == 'Bad' %}
+            <li class="list-group-item">
+              <a href="/contact_submissions" class="btn btn-shiny btn-smaller">Contact Submissions</a>
+            </li>
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -46,7 +56,7 @@
               <div class="card-body">
                 <h6 class="card-title">Project 1</h6>
                 <p class="card-text">A brief description of Project 1.</p>
-                <a href="#" class="btn btn-primary btn-sm">View</a>
+                <a href="#" class="btn btn-shiny btn-smaller">View</a>
               </div>
             </div>
           </div>
@@ -57,7 +67,7 @@
               <div class="card-body">
                 <h6 class="card-title">Project 2</h6>
                 <p class="card-text">A brief description of Project 2.</p>
-                <a href="#" class="btn btn-primary btn-sm">View</a>
+                <a href="#" class="btn btn-shiny btn-smaller">View</a>
               </div>
             </div>
           </div>
@@ -68,7 +78,7 @@
               <div class="card-body">
                 <h6 class="card-title">Project 3</h6>
                 <p class="card-text">A brief description of Project 3.</p>
-                <a href="#" class="btn btn-primary btn-sm">View</a>
+                <a href="#" class="btn btn-shiny btn-smaller">View</a>
               </div>
             </div>
           </div>
