--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,7 +19,7 @@
         <h5 class="card-title">Navigation</h5>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <a href="/dashboard" class="btn btn-shiny btn-smaller">Dashboard</a>
+            <a href="/" class="btn btn-shiny btn-smaller">Home</a>
           </li>
           <li class="list-group-item">
             <a href="/contact" class="btn btn-shiny btn-smaller">Contact</a>
